--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,8 @@
 }
 
 .board {
-    width: 50%;
+    width: clamp(100px, 50vh, 100vw);
+    height: clamp(100px, 50vh, 100vw);
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
 }
