--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,17 @@
-
-
 .container {
-    display: grid;
     height: 100vh;
     width: 100vw;
-    padding: 50px;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 6fr;
     justify-items: center;
 }
 
 .header {
-    text-align: center;
+    margin: 10px 0;
 }
 
 .board {
     width: clamp(100px, 50vh, 100vw);
     height: clamp(100px, 50vh, 100vw);
+    margin: 20px 0;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
 }
@@ -27,7 +22,7 @@
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-button {
+.board button {
     height: 100%;
     width: 100%;
 }
