Change background image and add sizing for it

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 html {
-    background-image: url('playground-unsplash.jpg');
-    background-size: 100%;
+    background-image: url('volodymyr-dobrovolskyy-prdrKa0lPDg-unsplash.jpg');
+    background-size: cover;
 }
 
 .container {
