--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'schoolbellregular';
+    src: url('fonts/schoolbell-webfont.woff2') format('woff2'),
+         url('fonts/schoolbell-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+:root {
+    font-family: 'schoolbellregular', 'Courier New', sans-serif;
+}
+
 html {
     background-image: url('volodymyr-dobrovolskyy-prdrKa0lPDg-unsplash.jpg');
     background-size: cover;
@@ -7,16 +19,25 @@ html {
     height: 100vh;
     width: 100vw;
     margin: 0;
+    display: grid;
     justify-items: center;
 }
 
 .header {
-    margin: 10px 0;
+    margin: 50px 0 0 0;
     text-align: center;
+}
+
+.header h1 {
+    letter-spacing: 0.3rem;
 }
 
 .winner-announce {
     display: none;
+}
+
+.board-and-button {
+    justify-items: center;
 }
 
 .board {
@@ -25,21 +46,23 @@ html {
     margin: 20px 0;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
+    gap: 5px;
 }
 
 .row {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-}
-
-.board, .row {
-    gap: 3px;
+    gap: 10px;
 }
 
 .board button {
     height: 100%;
     width: 100%;
+    border: none;
+    border-radius: 5px;
+    padding: 15px;
+    background-image: repeating-linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0) 10% 90%, rgba(0, 0, 0, 0.5));
 }
 
 .refresh {
@@ -47,11 +70,11 @@ html {
 }
 
 .color-0 {
-    background-color: blue;
+    background-color: rgb(54, 54, 184);
 }
 
 .color-1 {
-    background-color: red;
+    background-color: rgb(247, 59, 59);
 }
 
 .color-2 {
