--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,20 @@ html {
 }
 
 .header h2 {
-    font-size: clamp(1rem, 0.5rem + 1.5vw, 1.6rem);
+    font-size: clamp(1rem, 0.5rem + 1vw, 1.6rem);
+}
+
+form {
+    display: grid;
+    gap: 15px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+}
+
+input {
+    font-weight: 400;
+    text-align: center;
 }
 
 .winner-announce {
@@ -78,6 +91,9 @@ html {
 
 .refresh {
     display: none;
+    font-size: 1.25rem;
+    letter-spacing: .1rem;
+    border: 2px solid black;
 }
 
 .color-0 {
